kube/prod/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-pec-2-deployment
  labels:
    app: kube-pec-2
    component: front-end
    resource: flutter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-pec-2
      component: front-end
      resource: flutter
  template:
    metadata:
      labels:
        app: kube-pec-2
        component: front-end
        resource: flutter
    spec:
      containers:
        - name: front-end
          image: charlineroyer937/frontend-pec-2:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
