kube/prod/front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: front-managed-cert
spec:
  ingressClassName: gce
  rules:
    - host: onlyflick.akiagaming.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-pec-2-service
                port:
                  number: 80
